/* CHANGELOG FOR PORTMIDI
 *
 * 15Jan07 Roger Dannenberg
 *  - multiple rewrites of sysex handling code to take care of 
 *     error-handling, embedded messages, message filtering,
 *     driver bugs, and host limitations.
 *  - fixed windows to use dwBufferLength rather than 
 *     dwBytesRecorded for long buffer output (fix by Nigel Brown)
 *  - Win32 MME code always appends an extra zero to long buffer
 *     output to work around a problem with earlier versions of Midi Yoke
 *  - Added mm, a command line Midi Monitor to pm_test suite
 *  - Revised copyright notice to match PortAudio/MIT license (requests 
 *     are moved out of the license proper and into a separate paragraph)
 *
 * 18Oct06 Roger Dannenberg
 *  - replace FIFO in pmutil with Light Pipe-based multiprocessor-safe alg.
 *  - replace FIFO in portmidi.c with PmQueue from pmutil
 *
 * 07Oct06 cpr & Roger Dannenberg
 *  - overhaul of CoreMIDI input to handle running status and multiple
 *  -    messages per packet, with additional error detection
 *  - added Leigh Smith and Rick Taube support for Common Lisp and
 *  -    dynamic link libraries in OSX
 *  - initialize static global seq = NULL in pmlinuxalsa.c
 *
 * 05Sep06 Sebastien Frippiat
 *  - check if (ALSA) seq exists before closing it in pm_linuxalsa_term()
 *
 * 05Sep06 Andreas Micheler and Cecilio
 *  - fixed memory leak by freeing someo objects in pm_winmm_term()
 *  - and another leak by freeing descriptors in Pm_Terminate()
 *
 * 23Aug06 RBD
 *  - various minor fixes
 *
 * 04Nov05 Olivier Tristan
 *  - changes to OS X to properly retrieve real device name on CoreMidi
 *
 * 19Jul05 Roger Dannenberg
 *  - included pmBufferMaxSize in Pm_GetErrorText()
 *
 * 23Mar05 Torgier Strand Henriksen
 *  - cleaner termination of porttime thread under Linux
 *
 * 15Nov04 Ben Allison
 *  - sysex output now uses one buffer/message and reallocates buffer
 *  -    if needed
 *  - filters expanded for many message types and channels